packages/flutter_vst3/dart_vst_host/native/include/gfpa_dsp.h

/// Opaque handle to a native GFPA DSP effect instance.
typedef void* GfpaDspHandle;
/// Insert-effect callback — called on the ALSA audio thread (allocation-free).
///
/// Reads [frames] samples from inL/inR (the source's dry signal), writes the
/// processed stereo result to outL/outR.  All pointers are guaranteed non-null
/// and point to pre-allocated buffers of at least [frames] floats.
typedef void (*GfpaInsertFn)(const float* inL, const float* inR,
                              float* outL, float* outR,
                              int32_t frames, void* userdata);
/// Create a native GFPA DSP instance for the given pluginId.
///
/// [pluginId] must be one of:
///   "com.grooveforge.reverb", "com.grooveforge.delay", "com.grooveforge.wah",
///   "com.grooveforge.eq", "com.grooveforge.compressor", "com.grooveforge.chorus"
///
/// Returns NULL for unrecognised IDs.
/// [sampleRate] and [blockSize] are used to pre-size internal delay buffers.
DVH_API GfpaDspHandle gfpa_dsp_create(const char* pluginId,
                                       int32_t sampleRate,
                                       int32_t blockSize);
/// Set a parameter using its string id and PHYSICAL (denormalized) value.
///
/// Thread-safe: may be called from the Dart isolate while the ALSA thread runs.
/// The Dart side must convert normalised [0,1] → physical using
///   physical = min + norm * (max - min)
/// before calling this function.
DVH_API void gfpa_dsp_set_param(GfpaDspHandle handle,
                                 const char* paramId,
                                 double physicalValue);
/// Return the insert callback for this DSP instance.
///
/// The returned function pointer is static and valid for the entire lifetime
/// of the process — it does not change between calls.
DVH_API GfpaInsertFn gfpa_dsp_insert_fn(GfpaDspHandle handle);
/// Return the userdata pointer to pass alongside [gfpa_dsp_insert_fn].
///
/// The handle itself is used as userdata; this function simply casts and
/// returns it for clarity at the call site.
DVH_API void* gfpa_dsp_userdata(GfpaDspHandle handle);
/// Destroy the DSP instance and free all associated resources.
///
/// The caller must unregister the insert from the chain via
/// dvh_remove_master_insert() before calling this function to ensure the
/// audio thread no longer holds a dangling function pointer.
DVH_API void gfpa_dsp_destroy(GfpaDspHandle handle);
/// Set the current BPM for BPM-synced effects (delay, wah, chorus).
///
/// Called from Dart whenever the transport tempo changes.  The value is stored
/// in a global atomic float shared across all instances.
DVH_API void gfpa_set_bpm(double bpm);